--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -26,3 +26,12 @@ h3 {
 .sub-heading-color {
     color: var(--highlight-color);
 }
+
+/* Navbar */
+#navbar {
+    background-color: var(--primary-color);
+}
+
+#navbar .logo {
+    width: 30px;
+}
