--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,5 +1,5 @@
 /* Google fonts import */
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Macondo&display=swap");
 
 /* CSS Variables */
 :root {
@@ -11,7 +11,8 @@
     --highlight-color-light: #7a9fc2; /* light blue */
 }
 
-/* Global Styles */
+/* Global styles */
+
 body {
     font-family: var(--primary-font);
 }
@@ -42,6 +43,7 @@ h2 {
 }
 
 /* Navbar */
+
 #navbar {
     background-color: var(--primary-color);
 }
@@ -51,11 +53,13 @@ h2 {
 }
 
 /* Header */
+
 #header .lead {
     font-family: var(--secondary-font);
 }
 
 /* Services */
+
 #services .card-footer {
     font-weight: bold;
     color: var(--highlight-color);
@@ -66,31 +70,54 @@ h2 {
     margin-bottom: 1.5rem;
 }
 
-/* Media Queries */
+/* Game library cards */
+
+#new-games .card,
+#fav-games .card {
+    border: none;
+}
+
+/* grid visualisation CSS for testing */
+
+/* .container,
+.row {
+    border: 2px solid black;
+}
+
+.col-12 {
+    border: 2px solid white;
+    background-color: lightgray;
+} */
+
+/* Media queries */
 
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
+    /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: 191px;
     }
 }
 
-/* Large devices (desktops, 992px and up) */
+/* Large devices (small laptops, 992px and up) */
 @media screen and (min-width: 992px) {
+    /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: auto;
     }
 }
 
-/* Extra large devices (large desktops, 1200px and up) */
+/* xl devices (large desktops, 1200px and up) */
 @media screen and (min-width: 1200px) {
+    /* make all service cards the same height for consistency */
     #services .card-body {
         min-height: 220px;
     }
 }
 
-/* Extra extra large devices (larger desktops, 1400px and up) */
+/* xxl devices (larger desktops, 1400px and up) */
 @media screen and (min-width: 1400px) {
+    /* make all service cards the same height for consistency */
     #services .card-body {
         min-height: 195px;
     }
